pager shift issue

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -71,6 +71,7 @@ button.tidy__carousel-controller[data-carousel-controller] {
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	outline: none;
+	cursor: pointer;
 
 	svg {
 		position: absolute;
